# SimplestSampler

./: .gitignore  AGENTS.md  DESIGN.md  PRODUCT.md  README.md
.cursor/rules/: project-notes.mdc
.cursor/skills/impeccable/: SKILL.md
.cursor/skills/impeccable/reference/: critique.md  init.md
.impeccable/: design.json
SimplestSampler/: Info.plist  SimplestSamplerApp.swift
SimplestSampler Notes/: 2026-06-06-phase-1-swift-app.md  2026-06-06-phase-2-pt-capture.md  2026-06-06-shortcut-preferences.md  2026-06-06.md  2026-06-09-dark-mode.md  2026-06-09-notes-system-alignment.md  2026-06-09.md  2026-06-10-simpleish-tab.md  2026-06-10.md  2026-06-11-aax-plugin-plan.md  2026-06-11-active-slot-reorder.md  2026-06-11-debug-build-script.md  2026-06-11-overcue-default-theme.md  2026-06-11-slot-row-rename-spacing.md  2026-06-11.md  2026-06-12-aax-gui-crash-fix.md  2026-06-12-aax-plugin-rebuild.md  2026-06-12-play-buttons.md  2026-06-12-sound-board-tab.md  2026-06-12-window-sizing-scroll.md  2026-06-12.md  Home.md  Notes System.md
SimplestSampler Notes/Areas/: Native-Helper.md  PT-Capture.md  Sampler.md
SimplestSampler Notes/Dashboards/: Open Loops.md  _README.md
SimplestSampler Notes/Decisions/: Swift standalone separate library.md  _README.md
SimplestSampler Notes/Incidents/: _README.md
SimplestSampler Notes/Known-Good/: Data Locations.md  _README.md
SimplestSampler Notes/Phases/: Phase 1 Playback.md  Phase 2 PT Capture.md  Phase 3 AAX Plugin.md
SimplestSampler Notes/Releases/: _README.md
SimplestSampler Notes/Runbooks/: Agent Session Handoff.md  Build and Run.md  _README.md
SimplestSampler Notes/Templates/: Daily Note Template.md  Decision Record Template.md  Incident Note Template.md  Release Note Template.md  Runbook Template.md  Task Note Template.md  _README.md
SimplestSampler.xcodeproj/: project.pbxproj
SimplestSampler/Models/: CaptureModels.swift  SamplerCapture.swift  SamplerPreferences.swift
SimplestSampler/Services/: ActiveSlotService.swift  AudioOutputDeviceService.swift  AudioPlaybackService.swift  ConsolidateFallbackService.swift  FrontmostAppService.swift  GlobalShortcutManager.swift  MultichannelWaveRenderer.swift  PTSLHelperClient.swift  PTTimecodeMath.swift  PluginBridgeService.swift  PreferencesStore.swift  ProToolsCaptureService.swift  SamplerVolumeMath.swift  StoredLibraryService.swift
SimplestSampler/ViewModels/: SamplerViewModel.swift
SimplestSampler/Views/: ContentView.swift  SamplerTheme.swift  SamplerVolumeSlider.swift  ShortcutBindingButton.swift  ShortcutPreferencesView.swift  SimpleishCategoryBar.swift  SlotRowView.swift  SoundBoardView.swift  StoredCategoryBar.swift  VolumeControlView.swift
aax/: CMakeLists.txt
aax/SimplestSamplerAudioSuite/: CMakeLists.txt
aax/SimplestSamplerAudioSuite/Source/: CaptureWavWriter.cpp  CaptureWavWriter.h  PluginLibraryBridge.cpp  PluginLibraryBridge.h  SimplestSampler_AS_Defs.h  SimplestSampler_AS_Describe.cpp  SimplestSampler_AS_GUI.h  SimplestSampler_AS_GUI.mm  SimplestSampler_AS_HostProcessor.cpp  SimplestSampler_AS_HostProcessor.h  SimplestSampler_AS_Parameters.cpp  SimplestSampler_AS_Parameters.h
native/: CMakeLists.txt
native/src/: cue_global_hotkey_helper.cpp  ptsl_markers_helper.cpp
scripts/: build-aax-plugin.js  build-app.sh  build-native-helper.js  run-app.sh  validate_notes.py
